--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ on:
               default: 'https://sourceforge.net/projects/a03-files/files/A035FXXU4CWI1/vendor.img'
         ODM:
               description: 'Enter Direct Link Of Your odm.img(leave default if your device does not have odm) '
-              default: ' https://no-odm.img '
+              default: ' https://sourceforge.net/projects/a03-files/files/no-odm.img '
         SUPER:
               description: 'Enter The Size Of Your Super Partition'
               required: true
@@ -57,12 +57,12 @@ jobs:
     - name: Downloading Your Vendor And Odm(if applicable)
       run: |
         cd lpbinary/binary
-        wget  ${{ github.event.inputs.VENDOR }}
-        wget  ${{ github.event.inputs.ODM }}
+        wget -q ${{ github.event.inputs.VENDOR }}
+        wget -q ${{ github.event.inputs.ODM }}
         if [ -f *.zip ]; then  unzip *.zip; fi
         if [ -f *.xz ]; then  unxz *.xz; fi
-        wget  https://sourceforge.net/projects/a03-files/files/product.img
-        wget  https://sourceforge.net/projects/a03-files/files/system_ext.img
+        wget  -q https://sourceforge.net/projects/a03-files/files/product.img
+        wget  -q https://sourceforge.net/projects/a03-files/files/system_ext.img
     - name: Downloading Your GSI And Extracting
       run: |
         cd lpbinary/binary
