--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ on:
               default: 'https://sourceforge.net/projects/a03-files/files/A035FXXU4CWI1/vendor.img'
         ODM:
               description: 'Enter Direct Link Of Your odm.img(leave default if your device does not have odm) '
-              default: ' https://sourceforge.net/projects/a03-files/files/no-odm.img '
+              default: ' https://sourceforge.net/projects/a03-files/files/no-odm.txt '
         SUPER:
               description: 'Enter The Size Of Your Super Partition'
               required: true
